[package]
name = "ascript-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# FUZZ (plan Task 2) — ISOLATED workspace member. Its own empty `[workspace]` table
# (mirroring `tree-sitter-ascript/Cargo.toml`) keeps `libfuzzer-sys`/`arbitrary`/
# cargo-fuzz OUT of the root `ascript` build graph: a plain `cargo build` and
# `cargo build --no-default-features` at the repo root pull in NONE of these. This
# crate is only ever built by `cargo +nightly fuzz` (or a direct
# `cargo +nightly build --manifest-path fuzz/Cargo.toml`), never absorbed by the root.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# `arbitrary` (with derive) is a NORMAL dep of THIS isolated crate only — the
# differential/parser targets (landing in later tasks) `#[path]`-include the shared
# `src/fuzzgen/` generator, which is `arbitrary`-driven. It never reaches the root graph.
arbitrary = { version = "1", features = ["derive"] }
# `indexmap` is a DIRECT dep of the `worker_serialize` target only (it builds `Value::Object`/
# `Map`/`Set` graphs over `IndexMap`/`IndexSet` on the current thread — `Value` is `!Send`). It
# is the SAME `indexmap` `ascript` uses, so no second copy enters the build. Like `arbitrary`,
# it is a dep of THIS isolated crate only and never reaches the root `ascript` graph.
indexmap = "2"

# The `aso_roundtrip` target only needs the CORE `.aso` reader + verifier + VM run path,
# all of which build under `--no-default-features`. We enable ONLY the `fuzzgen` feature:
# cargo-fuzz builds with `--cfg fuzzing`, which activates `pub mod fuzzgen` in the lib (so the
# generator the differential/parser targets `#[path]`-include is available + the `arbitrary`
# dep it `use`s is linked). `fuzzgen` is NON-default, so this never perturbs the root graph.
[dependencies.ascript]
path = ".."
default-features = false
features = ["fuzzgen"]

# libFuzzer targets must be built with debug assertions + overflow checks so a fuzzer
# trips them as findings, and with some optimization so campaigns run at speed.
[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true

[[bin]]
name = "aso_roundtrip"
path = "fuzz_targets/aso_roundtrip.rs"
test = false
doc = false
bench = false

# SELF-CONTAINED-BUNDLES Task 4.2 — the `ASCRIPTA` module-archive container decoder
# (`ModuleArchive::decode`, a security surface: a shipped bundle parses untrusted
# archive bytes). Decode no-panic + decode-stability + structured encode∘decode.
[[bin]]
name = "archive_roundtrip"
path = "fuzz_targets/archive_roundtrip.rs"
test = false
doc = false
bench = false

# FUZZ Task 7 — the headline three-way differential program fuzzer (reaches `ascript::fuzzgen`
# via the `fuzzgen` feature; runs each generated program on tree-walker + specialized-VM +
# generic-VM and asserts they agree).
[[bin]]
name = "differential"
path = "fuzz_targets/differential.rs"
test = false
doc = false
bench = false

# FUZZ Task 7 — the source-parser no-panic + front-end-agreement target (CST + legacy parsers).
[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

# FUZZ Task 6 — the worker structured-clone airlock (round-trip + sendability honesty +
# decode-arbitrary-bytes rejection safety).
[[bin]]
name = "worker_serialize"
path = "fuzz_targets/worker_serialize.rs"
test = false
doc = false
bench = false

# REPLAY Task 2 — the `ASTRC` trace-container decoder byte-fuzz target (REPLAY §3).
# Feeds ARBITRARY bytes to `ascript::trace::read_trace` — asserts no panic, no OOM,
# no hang. The in-suite truncation/bomb/crc tests are the real guard; this is the
# coverage-guided extension.
[[bin]]
name = "trace_roundtrip"
path = "fuzz_targets/trace_roundtrip.rs"
test = false
doc = false
bench = false

# WARM Task 5 — the PGO section codec byte-fuzz target (WARM spec §3.2).
# Feeds ARBITRARY bytes to PgoSection::decode — asserts no panic, no OOM, idempotent
# re-encode if Some is returned. The in-suite truncation/bomb tests are the real guard;
# this is the coverage-guided extension.
[[bin]]
name = "pgo_section"
path = "fuzz_targets/pgo_section.rs"
test = false
doc = false
bench = false
