# Standalone crate: NOT a member of the ascript repo workspace, so a repo-root
# `cargo build` does not absorb this WASM extension (mirrors the grammar crate).
[workspace]

[package]
name = "zed_ascript"
version = "0.6.0"
edition = "2021"
publish = false
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/ascript.rs"

[dependencies]
# Target wasm32-wasip2 with the current zed_extension_api (0.7). Bump as Zed's API advances.
zed_extension_api = "0.7"
